/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_package = "com.google.samples.apps.nowinandroid.core.datastore";
option java_multiple_files = true;

message UserPreferences {
    reserved 2;
    repeated int32 deprecated_int_followed_topic_ids = 1;
    int32 topicChangeListVersion = 3;
    int32 authorChangeListVersion = 4;
    int32 episodeChangeListVersion = 5;
    int32 newsResourceChangeListVersion = 6;
    repeated int32 deprecated_int_followed_author_ids = 7;
    bool has_done_int_to_string_id_migration = 8;
    repeated string followed_topic_ids = 9;
    repeated string followed_author_ids = 10;
    repeated string bookmarked_news_resource_ids = 11;
}
